# TKOM-Interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: [TKOM] Interpreter prostego jezyka - koncowa.docx  [TKOM] Interpreter prostego jezyka - wstepna.docx  [TKOM] Interpreter prostego języka.docx  ~$KOM] Interpreter prostego języka.docx
src/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/Token/: CMakeLists.txt  Token.cpp  Token.hpp  TokenType.hpp  TokenTypeDefiner.cpp  TokenTypeDefiner.hpp
src/modules/ast/: AST.hpp  AndExpr.cpp  AndExpr.hpp  BaseLogicExpr.cpp  BaseLogicExpr.hpp  BaseMathExpr.cpp  BaseMathExpr.hpp  CMakeLists.txt  Expression.hpp  FunctionDef.hpp  IfStatement.hpp  LogicExpr.cpp  LogicExpr.hpp  MathExpr.cpp  MathExpr.hpp  MultiplicativeExpr.cpp  MultiplicativeExpr.hpp  Number.cpp  Number.hpp  Program.hpp  RelationalExpr.cpp  RelationalExpr.hpp  Return.hpp  ReturnStatement.hpp  Statement.hpp  StatementBlock.hpp  Variable.cpp  Variable.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/modules/ast/expression/: AndExpr.cpp  AndExpr.hpp  BaseLogicExpr.cpp  BaseLogicExpr.hpp  BaseMathExpr.cpp  BaseMathExpr.hpp  CMakeLists.txt  Expression.hpp  LogicExpr.cpp  LogicExpr.hpp  MathExpr.cpp  MathExpr.hpp  MultiplicativeExpr.cpp  MultiplicativeExpr.hpp  RelationalExpr.cpp  RelationalExpr.hpp
src/modules/ast/nodes/: CMakeLists.txt  FunctionDef.hpp  Number.cpp  Number.hpp  Program.hpp  StatementBlock.hpp  Variable.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/modules/ast/statement/: AssignStatement.hpp  BlockStatement.hpp  CMakeLists.txt  FunctionCall.hpp  IfStatement.hpp  PrintStatement.hpp  ReturnStatement.hpp  Statement.hpp  WhileStatement.hpp
src/modules/exception/: CMakeLists.txt  Exception.cpp  Exception.hpp
src/modules/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
src/modules/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/modules/printer/: CMakeLists.txt  Printer.cpp  Printer.hpp
src/modules/printer/console_colour/: CMakeLists.txt  ConsoleColour.cpp  ConsoleColour.h
src/modules/reader/: CMakeLists.txt  Reader.cpp  Reader.hpp  SignPosition.cpp  SignPosition.hpp
tests/: CMakeLists.txt
tests/script/: test1.in  test2.in  test3.in
tests/unitTest/: CMakeLists.txt
tests/unitTest/ast/: AndExpr_test.cpp  BaseLogicExpr_test.cpp  BaseMathExpr_test.cpp  CMakeLists.txt  FunctionDef_test.cpp  LogicExpr_test.cpp  MathExpr_test.cpp  MultiplicativeExpr_test.cpp  RelationalExpr_test.cpp  Variable_test.cpp
tests/unitTest/ast/expression/: AndExpr_test.cpp  BaseLogicExpr_test.cpp  BaseMathExpr_test.cpp  CMakeLists.txt  LogicExpr_test.cpp  MathExpr_test.cpp  MultiplicativeExpr_test.cpp  RelationalExpr_test.cpp
tests/unitTest/ast/statement/: AssignStatement_test.cpp  BlockStatement_test.cpp  CMakeLists.txt  FunctionCall_test.cpp  IfStatement_test.cpp  PrintStatement_test.cpp  ReturnStatement_test.cpp  WhileStatement_test.cpp
tests/unitTest/lexer/: CMakeLists.txt  Lexer_test.cpp
tests/unitTest/parser/: CMakeLists.txt  Parser_test.cpp
tests/unitTest/printer/: CMakeLists.txt  ConsoleColour_test.cpp  Printer_test.cpp
tests/unitTest/reader/: CMakeLists.txt  Reader_test.cpp
tests/unitTest/token/: CMakeLists.txt  TokenTypeDefiner_test.cpp
